try to fix overflow in mobil

--- a/style.css
+++ b/style.css
@@ -9,10 +9,10 @@
 html { 
     width: 100vw;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 body {
-    width: 100%;
     font-family: "Roboto", sans-serif;
     background-color: #222;
     color: white;
